# bodyreswitcher

./: .gitignore  CMakeLists.txt  README.md  cpack_config.cmake
deb/: bodyreswitcher.desktop
locale/pl_PL/LC_MESSAGES/: bodyreswitcher.mo
po/: bodyreswitcher.pot
po/pl_PL/: bodyreswitcher.po
src/: animation.cpp  animation.hpp  errors.cpp  errors.hpp  filesystem.cpp  filesystem.hpp  game_config.cpp  game_config.hpp  main.cpp  mls.cpp  mls.hpp  rect.cpp  rect.hpp  ui.cpp  ui.hpp
src/game_math/: graph.hpp  vector.cpp  vector.hpp
src/logic/: about_menu.cpp  about_menu.hpp  buttons.cpp  buttons.hpp  common.cpp  common.hpp  game_panel.cpp  game_panel.hpp  layer.hpp  main_menu.cpp  main_menu.hpp  main_menu_background.cpp  main_menu_background.hpp  module.cpp  module.hpp  new_game_menu.cpp  new_game_menu.hpp  options_menu.cpp  options_menu.hpp  person_graph.cpp  person_graph.hpp  screen_size_menu.cpp  screen_size_menu.hpp
src/multimedia/: base.cpp  base.hpp  font.cpp  font.hpp  graphics.cpp  graphics.hpp  sound.cpp  sound.hpp  system.cpp  system.hpp  window.cpp  window.hpp
tests/: CMakeLists.txt  test_animation.cpp  test_filesystem.cpp  test_graph.cpp  test_multimedia_base.cpp  test_person_graph.cpp  test_rectangle.cpp  test_ui.cpp  test_vector.cpp
v1src/logic/: about_screen.cpp  about_screen.hpp  layer.cpp  main_menu.cpp  new_game_menu.cpp  new_game_menu.hpp  options_menu.cpp  screen_size_menu.cpp  screen_size_menu.hpp
